# betsapi3-python

./: .gitignore  README.md  pyproject.toml
betsapi3/: __init__.py  base_client.py  bet365.py  utils.py
